adjust video size

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Ted Talk: Save the world by changing the rules</h2>
             <span class="awsm-date">December 12, 2018</span>
             <p>Greta Thunberg explains the climate crisis and why she went on school strike to raise awaireness.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/EAmmUIEsN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width=100% height="315" src="https://www.youtube.com/embed/EAmmUIEsN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           <!-- awsm-timeline-content-inner -->
         </div>
@@ -63,7 +63,7 @@
             <h2>We should all be feminists</h2>
             <span class="awsm-date">April 12, 2013</span>
             <p>Chimamanda Ngozi Adichie explains how we get to a fairer world of happier men and women</p>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/S6ufvYWTqQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width=100% height="315" src="https://www.youtube.com/embed/S6ufvYWTqQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <!-- awsm-timeline-content-inner -->
         </div>
@@ -80,7 +80,7 @@
             <h2>Build a School in the Cloud</h2>
             <span class="awsm-date">February 27, 2013</span>
             <p>Sugata Mitra explains how online education can change the world.</p>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/y3jYVe1RGaU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width=100% height="315" src="https://www.youtube.com/embed/y3jYVe1RGaU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <!-- awsm-timeline-content-inner -->
         </div>
