adjust video size 2

--- a/index.html
+++ b/index.html
@@ -17,22 +17,16 @@
 
 <body>
 
+  <video autoplay muted loop id="bg-video">
+    <source src="video/gfp-astro-timelapse.mp4" type="video/mp4">
+  </video>
+
+  <div class="topnav">
+    <h2>Wind of Knowledge</h2>
+  </div>
+
   <div class="awsm-container">
     <!-- awsm-left-align/awsm-right-align/awsm-alternate/awsm-date-opposite/awsm-responsive-right-->
-
-    <div class="top-text">
-      <p></p>
-      <h3>IT’S THE ONLY LIFE YOU HAVE.</h3>
-      <h3>DO YOU DARE TO STAY IN?</h3>
-      <h3>DO YOU DARE TO GO OUT?</h3>
-      <p></p>
-    </div>
-    <div class="top-box">
-      <h4>WHAT FUTURE DO YOU DREAM OF?</h4>
-    </div>
-    <div class="middle-box">
-    </div>
-
 
     <div class="awsm-timeline awsm-timeline-style-1 awsm-alternate awsm-responsive-right awsm-date-opposite">
       <!-- awsm-timeline-block -->
@@ -46,8 +40,11 @@
             <h2>Ted Talk: Save the world by changing the rules</h2>
             <span class="awsm-date">December 12, 2018</span>
             <p>Greta Thunberg explains the climate crisis and why she went on school strike to raise awaireness.</p>
-            <iframe width=100% height="315" src="https://www.youtube.com/embed/EAmmUIEsN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br>
+            <div class="video-container">
+              <iframe class="video" src="https://www.youtube.com/embed/EAmmUIEsN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+          </div>
           <!-- awsm-timeline-content-inner -->
         </div>
         <!-- awsm-timeline-content -->
@@ -63,8 +60,11 @@
             <h2>We should all be feminists</h2>
             <span class="awsm-date">April 12, 2013</span>
             <p>Chimamanda Ngozi Adichie explains how we get to a fairer world of happier men and women</p>
-              <iframe width=100% height="315" src="https://www.youtube.com/embed/S6ufvYWTqQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+            <br>
+            <div class="video-container">
+              <iframe class="video" src="https://www.youtube.com/embed/S6ufvYWTqQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            </div>
           <!-- awsm-timeline-content-inner -->
         </div>
         <!-- awsm-timeline-content -->
@@ -79,9 +79,12 @@
           <div class="awsm-timeline-content-inner">
             <h2>Build a School in the Cloud</h2>
             <span class="awsm-date">February 27, 2013</span>
+            <br>
             <p>Sugata Mitra explains how online education can change the world.</p>
-              <iframe width=100% height="315" src="https://www.youtube.com/embed/y3jYVe1RGaU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+            <div class="video-container">
+              <iframe class="video" src="https://www.youtube.com/embed/y3jYVe1RGaU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            </div>
           <!-- awsm-timeline-content-inner -->
         </div>
         <!-- awsm-timeline-content -->
