--- a/theplay.html
+++ b/theplay.html
@@ -69,6 +69,10 @@
                <h3 class="heading-inner">Who Killed My Father</h3>
                   <div class="hr"></div>
                     <h4>
+                    <strong>May 16th</strong><br>
+                    Watch the play anytime from 14:00 - 20:00 (GMT+3)<br>
+                    Join a conversation after the play at 20:00 (GMT+3)
+                    <br>  <br>
                     The novel "Who Killed My Father" by French writer Édouard Louis is put to stage by moda sahnesi. 
                     The book was first released in French in May 2018 and moda sahnesi in Istanbul, Turkey has adapted 
                     the text to stage and had their premiere of the play on September 2020. 
