--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                        <a href="theplay.html">The Play</a>
                     </li>
                     <li>
-                        <a target="_blank" href="https://forms.gle/J2j3gnbJpeCYDRrA6">Register</a>
+                        <a href="register.html">Register</a>
                     </li>
                 </ul>
             </div>
