--- a/register.html
+++ b/register.html
@@ -75,7 +75,8 @@
                     <br><br>
                     <a target="_blank" href="https://beyazguvercinler.khas.edu.tr/en/donate-now">Click to make a donation to the scholarship</a>
                     <br><br>
-                    <a target="_blank" href="https://forms.gle/AFwU7UTkXgzff5tNA">Click to submit proof of donation</a>
+                    You will automatically receive a link to the event if you pay by credit card. If you prefer to use wire transfer: 
+                    <a target="_blank" href="https://forms.gle/AFwU7UTkXgzff5tNA">Click to submit proof of donation</a>.
                     <br><br>
                     For any questions or if you have any problems with the submission email us at <strong>hello@windofknowledge.com</strong>
                     </h4>
